<resources>
    <string name="Config_local_login" translatable="false">FAFAFA_71_y_%1$s_%2$s_%3$s_FCFCFC</string>
    <string name="app_name">Tags</string>
    <string name="system_name">Welcome to Blozi Market Manage System !</string>
    <string name="start_button">Binding</string>
    <string name="login_title">MarketManageSystem</string>
    <string name="login_username">Login Id</string>
    <string name="login_msg_enter_mobile">please enter LoginId</string>
    <string name="login_userpass">password</string>
    <string name="login_msg_enter_userpass">Please enter password</string>
    <string name="login_btn_show_pass">Show Password</string>
    <string name="login_btn_login_in">Login</string>
    <string name="auto">Auto</string>
    <string name="current_store">Current Store</string>
    <string name="current_store_error">Get current store failed</string>
    <string name="login_msg_enter_username_str">please enter loginID!</string>
    <string name="login_msg_enter_userpass_str">please enter password!</string>
    <string name="url_msg">Please enter the server address</string>
    <string name="success">Success</string>
    <string name="quit">Press Back Button Again will Exit</string>
    <string name="web_service_url">Server address:</string>
    <string name="configure_button">Config</string>
    <string name="goods_info_update">Modification of commodity information</string>
    <string name="goods_name">Goods name</string>
    <string name="goods_price">Goods Price</string>
    <string name="goods_code">Goods code</string>
    <string name="good_code">Goods code</string>
    <string name="good_name">Goods name</string>
    <string name="tag_code">Tag code</string>
    <string name="scan_thing">Scan </string>
    <string name="cocl">cocl</string>
    <string name="please_enter">please enter</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="other">Other</string>
    <string name="login_user">login user:</string>
    <string name="log_out_str">exit</string>
    <string name="title">choose scan type</string>
    <string name="goods">Goods</string>
    <string name="tags">Tags</string>
    <string name="bind_thing">bind</string>
    <string name="delete">delete</string>
    <string name="updateTags">upload</string>
    <string name="list">List</string>
    <string name="user">Me</string>
    <string name="reset">Reset</string>
    <string name="goods_str">Please scan the product information</string>
    <string name="tag_str">Please scan the price tag information</string>
    <string name="back">back</string>
    <string name="web_service_url_address">/MarketWebService/marketController/appService.do</string>
    <string name="failure_login">Please see if the server\'s address is correct</string>
    <string name="goods_search">Please enter the name of the goods...</string>
    <string name="is_not_bind">unbind</string>
    <string name="refresh_ing">refreshing</string>
    <string name="is_bottom">It is bottom</string>
    <string name="is_loading">Loading</string>
    <string name="is_bind_goods">The commodity has been bound to the price tag</string>
    <string name="scan">WIFI On/Off</string>
    <string name="onoff">Scan WIFI</string>
    <string name="socket_ip">192.168.1.1</string>
    <string name="socket_port">8899</string>
    <string name="frameHeader">255,255,255,</string>
    <string name="frameTail">,252,252,252</string>
    <string name="defaultDomineName">http://47.100.50.216:35005</string>
    <string name="KT0_SCAN">com.se4500.onDecodeComplete</string>
    <string name="InputCommodityCodeOrScan">Input commodity code or scan</string>
    <string name="GettingGoodsInformation">Getting goods information</string>
    <string name="GoodsBarCodeCannotBeEmpty">Goods bar code can not be empty</string>
    <string name="PleaseEnterGoodsBarcode">Please enter goods bar code</string>
    <string name="uploading">uploading</string>
    <string name="ParsingFailure">Parsing failure</string>
    <string name="ifReset">if reset?</string>
    <string name="barcode">Barcode</string>
    <string name="brand">brand</string>
    <string name="CommodityPrice">Commodity price</string>
    <string name="MembershipPrice">Member price</string>
    <string name="PromotionPrice">Promotion price</string>
    <string name="DiscountPrice">Discount price</string>
    <string name="Stock">Stock</string>
    <string name="QRcode">QR code</string>
    <string name="ActivityStartTime">Activity start time</string>
    <string name="ActivityEndTime">Activity end time</string>
    <string name="Grade">Grade</string>
    <string name="ActivityStartTimeError">Activity start time error</string>
    <string name="ActivityEndTimeError">Activity start time error</string>
    <string name="NoDataThatNeedsToBeSubmitted">No data that needs to be submitted</string>
    <string name="error">error</string>
    <string name="failed">failed</string>
    <string name="loading">loading</string>
    <string name="NotTagcode">Not Tagcode</string>
    <string name="NeedAdmin">Admin only</string>
    <string name="exit">Exit</string>
    <string name="PressAgainToExit">Press again to exit</string>
    <string name="ifExit">Exit?</string>
    <string name="confirm">Confirm</string>
    <string name="Submission">Submission</string>
    <string name="upload">upload</string>
    <string name="currentStoreDeleteTags"> %1$s -- delete tags </string>
    <string name="deleteTags"> Delete tags </string>
    <string name="totalOnes">Total\t %1$d</string>
    <string name="TagCodeHasBeenScanned">TagCode %1$s has been scanned</string>
    <string name="PleaseScanThePricetag">Please scan the price tag</string>
    <string name="confirmToDelete">Confirm to delete</string>
    <string name="ThePriceTagToBeDeletedWillBeUploadedToTheServerAndThenTheAdministratorWillManuallyDeleteThePriceTagInformation">The price tag to be deleted will be uploaded to the server, and then the administrator will manually delete the price tag information.</string>
    <string name="DeleteThePriceTagFunctionScanTheInvalidPriceTagAndSubmitItToThePriceTagToBeDeletedAndThePriceTagWillBeDeletedByTheAdministrator">
        Delete the price tag function: scan the invalid price tag and submit it to the price tag to be deleted, and the price tag will be deleted by the administrator.
    </string>
    <string name="TagsWaitTo">Tags wait to %1$s</string>
    <string name="InformationIsBeingSubmitted">Information about %1$s is being submitted</string>
    <string name="TagsTobeDelete">Tags need to be Delete</string>
    <string name="Tags">Tags</string>
    <string name="InformationIsBeingSubmittedToDeletePriceTagInformation">Information is being submitted to delete price tag information</string>
    <string name="LoginUser">Login user</string>
    <string name="Account">Account</string>
    <string name="MainStore">Main store</string>
    <string name="CurrentStore">Current store</string>
    <string name="PersonalInformation">Personal information</string>
    <string name="AdminAction">Admin action</string>
    <string name="CommodityModification">Commodity modification</string>
    <string name="GoodsImageColon">Commodity picture:</string>
    <string name="GoodsImageisLargeThanORDonotExist">The picture is larger than %1$s or does not exist</string>
    <string name="ShowImages">display picture</string>
    <string name="NoPicOfThisGoods">There is no picture for the this commodity</string>
    <string name="changeCurrentStore">Change the current store</string>
    <string name="currentStoreFormate">Current store:%1$s</string>
    <string name="mainStoreFormate">Main store:%1$s</string>
    <string name="rackManage">Shelf management</string>
    <string name="upTagOffline">Offline upload</string>
    <string name="PleaseFillInTheIPAddress">Please fill in the IP address</string>
    <string name="PleaseFillinThePortNumber">Please fill in the port number</string>
    <string name="PleaseEnterABarCode">Please enter a bar code</string>
    <string name="PortNumberColon">Port Number :</string>
    <string name="IPAddressColon">IP address:</string>
    <string name="DirectConnectionOfBaseStation">Direct connection of base station</string>
    <string name="loging">loging</string>
    <string name="message">message</string>
    <string name="noMoreData">there is no more data</string>
    <string name="update">update</string>
    <string name="APPIsTheLasted">The version of APP is the latest</string>
    <string name="PleaseFillTheServerAddress">Please enter the server address</string>
    <string name="DesktopServiceAddress">Desktop service address</string>
    <string name="ServerIP">Server IP</string>
    <string name="ServerPort">Server port</string>
    <string name="PleaseFillTheServerIP">Please enter the server IP</string>
    <string name="PleaseFillTheServerPort">Please enter the server port</string>
    <string name="Online">Online</string>
    <string name="Desktop">Desktop</string>
    <string name="DesktopService">Desktop service</string>
    <string name="deleteAccount">Delete the account : %1$s </string>
    <string name="PortIsNotRight">Port is not right</string>
    <string name="IPORPORTIsNotRight">IP or Port is not right</string>
    <string name="ConnectionIsInterruptedPleaseWaitForReconnectionOrLoginDirectly">Connection is interrupted. Please wait for reconnection or login directly.</string>
    <string name="overtime">overtime</string>
    <string name="AddRack">New shelves</string>
    <string name="EditableOrNot">Editable or not </string>
    <string name="Default">Default</string>
    <string name="TagCodeIsNotRight">TagCode is not right </string>
    <string name="enter">Enter</string>
    <string name="auto_login">Auto Login</string>
    <string name="Pleasesetallowedinputintheupperrightcorner">Please set allowed input in the upper right corner</string>
    <string name="ListWaitofuploads">List wait to uploads</string>
    <string name="rack_name">Rack name</string>
    <string name="rack_code">Rack code</string>
    <string name="max_lay">Max lay</string>
    <string name="place_length">Display length</string>
    <string name="height">Height</string>
    <string name="length">Length</string>
    <string name="remarks">Remarke</string>
    <string name="rackDetail">Rack detail</string>
    <string name="MaxLayNotAllowNull">Max Lay is not input</string>
    <string name="ANameConvenientToremember">A name convenient to remember</string>
    <string name="ACodeConvenientToremember">A code convenient to remember</string>
    <string name="DisplayLengthNotAllowNull">Display length is not allow none</string>
    <string name="deleteRackTips">Do you confirm the deletion of the information on this shelf? Delete it only in the background of the webpage.</string>
    <string name="Thecurrentshelfisnotyetsaved">The current shelf is not yet saved!</string>
    <string name="TheMaxLayersAndTheLongestShowcaseCannotbeempty">The maximum number of layers and the longest showcase can not be empty</string>
    <string name="NetError">Net Error</string>
    <string name="PleaseOpenTheCameraPermissionsManually">Please open the camera permissions manually</string>
    <string name="NextForceDistinguishTagcode">Next scan force distinguish tagcode  </string>
    <string name="AllForceDistinguishTagcode">ALL force distinguish tagcode</string>
    <string name="PushAgain">Push again</string>
</resources>