<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:orderInCategory="0"
        android:id="@+id/upTagOffline"
        android:icon="@drawable/pullup_orange"
        android:iconTint="@color/light_orange_yellow"
        android:title="@string/upTagOffline"
        app:showAsAction="always"
        />
    <item
        android:orderInCategory="1"
        android:id="@+id/allowEdit"
        android:icon="@drawable/pencil_orange"
        android:iconTint="@color/light_orange_yellow"
        android:title="@string/EditableOrNot"
        app:showAsAction="ifRoom"
        />
    <item
        android:orderInCategory="2"
        android:id="@+id/scan"
        android:icon="@drawable/scan_orange"
        android:iconTint="@color/light_orange_yellow"
        android:title="@string/scan_thing"
        app:showAsAction="ifRoom"
        />
    <item
        android:orderInCategory="3"
        android:id="@+id/exit"
        android:icon="@drawable/logout_orange"
        android:iconTint="@color/light_orange_yellow"
        android:title="@string/exit"
        app:showAsAction="ifRoom"/>
</menu>