<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:orderInCategory="0"
        android:id="@+id/view_detail"
        android:title="@string/rackDetail"
        android:icon="@drawable/eye_open_orange"
        android:iconTint="@color/light_orange_yellow"
        app:showAsAction="always"
        />
    <item
        android:orderInCategory="1"
        android:id="@+id/allowEdit"
        android:icon="@drawable/pencil_orange"
        android:iconTint="@color/light_orange_yellow"
        android:title="@string/EditableOrNot"
        app:showAsAction="always"
        />
    <item
        android:orderInCategory="2"
        android:id="@+id/save"
        android:icon="@drawable/save_orange"
        android:iconTint="@color/light_orange_yellow"
        android:title="@string/save"
        app:showAsAction="ifRoom"
        />
    <item
        android:orderInCategory="3"
        android:id="@+id/delete"
        android:icon="@drawable/delete_orange"
        android:iconTint="@color/light_orange_yellow"
        android:title="@string/delete"
        app:showAsAction="ifRoom"
        />
</menu>