<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_navhead_margin"
    android:id="@+id/nav_head_main_re"
    android:background="@drawable/side_nav_bar"
    >

    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:id="@+id/nav_background"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:alpha="0.9"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent" />-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/line_user"
        android:gravity="left|center"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/user_head"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:contentDescription="@string/login_username"
            android:src="@drawable/logo_mini_primary"
            />
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/user_head"
            android:textSize="24dp"
            android:textAppearance="@style/littleword"
            android:text="@string/login_username" />

        <TextView
            android:id="@+id/login_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/user_head"
            android:text="@string/Account"
            android:textAppearance="@style/littleword" />
    </RelativeLayout>

    <TextView
        android:id="@+id/main_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/line_user"
        android:textAppearance="@style/littleword"
        android:text="@string/MainStore" />
    <TextView
        android:id="@+id/current_store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/main_store"
        android:textAppearance="@style/littleword"
        android:text="@string/current_store" />



</RelativeLayout>
