<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_bind_goods"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blozi.bindtags.activities.ShowBindGoodsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#ffffff"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:gravity="center_vertical|center"
            android:layout_above="@+id/passlayout"
            android:weightSum="1">
            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:text="@string/goods_name"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/goods_name"
                android:layout_weight="0.57" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:gravity="center_vertical|center"
            android:layout_above="@+id/passlayout"
            android:weightSum="1">
            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:text="@string/goods_code"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/goods_code"
                android:layout_weight="0.57" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:gravity="center_vertical|center"
            android:layout_above="@+id/passlayout"
            android:weightSum="1">
            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:text="@string/tag_code"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/tag_code"
                android:layout_weight="0.57" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:gravity="center_vertical|center"
            android:layout_above="@+id/passlayout"
            android:weightSum="1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/to_reset"
                android:text="@string/reset"/>
            <TextView
                android:layout_width="50dp"
                android:layout_height="fill_parent" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scan"
                android:text="@string/scan_thing"/>
            <TextView
                android:layout_width="50dp"
                android:layout_height="fill_parent" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bind_thing"
                android:id="@+id/blind"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical|center"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/TEXT_VIEW_MSG" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <!--<TextView-->
            <!--android:layout_width="30dp"-->
            <!--android:layout_height="36dp" />-->
        <!--<TextView-->
            <!--android:gravity="center"-->
            <!--android:textSize="24dp"-->
            <!--android:text="@string/list"-->
            <!--android:id="@+id/blind_goods_list"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1" />-->

        <TextView
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:id="@+id/shop_list_btn"/>
        <TextView
            android:gravity="center"
            android:textSize="24dp"
            android:text="@string/bind_thing"
            android:id="@+id/to_blind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:layout_width="30dp"
            android:layout_height="36dp"/>
        <TextView
            android:id="@+id/import_tag"
            android:textSize="24dp"
            android:gravity="center"
            android:text="@string/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:layout_width="30dp"
            android:layout_height="36dp" />
        <TextView
            android:gravity="center"
            android:textSize="24dp"
            android:text="@string/user"
            android:id="@+id/user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:id="@+id/shop_me_btn" />

    </LinearLayout>

</RelativeLayout>
